--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <body>
     Hello world!
-
+    <br>
     <a href="/subpage">Link to subpage</a>
+    <br>
+    <a href="/subpage/newpage">Link to newpage</a>
   </body>
 </html>
